# flucq

./: CMakeLists.txt  Jstuff.f  README  anapar  animain.f  commons  dgesv.f  eor.begin  ewaldstuff.f  geniostuff.f  genpar  implic  iostuff.f  makeWaterCode.sh  makefile  mathstuff.f  propar  props.in  propsm.f  qdyn.f  qdynmd.f  qdynstuff.f  qpar  qpotstuff.f  ranstuff.f  stdin.test
support/: CMakeLists.txt  analyz.f  grabcl.f  hdpe.f  stin.f  tcorr.f
